cluster-config/dev/find/search/prod/container/container.yaml
---
---
# Source: container/templates/container-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: search
    app.kubernetes.io/instance: search-prod
  name: search-prod
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: search
    app.kubernetes.io/instance: search-prod
---

# Source: container/templates/container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-prod
  namespace: default
  labels:
    app.kubernetes.io/name: search
    app.kubernetes.io/instance: search-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: search
      app.kubernetes.io/instance: search-prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: search
        app.kubernetes.io/instance: search-prod
    spec:
      containers:
      - name: search
        image: episerver.azurecr.io/episerver/find-services-search:0.2-develop-47602
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1.8"
            memory: "6Gi"
          requests:
            cpu: "1.2"
            memory: "4Gi"
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: azure
          mountPath: /mnt/azure
      restartPolicy: Always
      imagePullSecrets:
      - name: acr-auth
      volumes:
      - name: azure
        azureFile:
          secretName: fileshare-secrets
          shareName: optiq-logs-prod
          readOnly: false
status: {}
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-search-prod
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/_search`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: search-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/_search`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: search-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-search-prod-swagger
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/search-api/swagger`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: strip-search-prod-api-prefix
    services:
    - name: search-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/search-api/swagger`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: strip-search-prod-api-prefix
    services:
    - name: search-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-search-prod-health
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/search-service/health`) && Headers(`Ring`, `prod`)'
    kind: Rule
    middlewares:
    - name: replace-search-prod-service-health-path
    services:
    - name: search-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/search-service/health`)'
    kind: Rule
    middlewares:
    - name: replace-search-prod-service-health-path
    services:
    - name: search-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-search-prod-api-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /search-api/
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: replace-search-prod-service-health-path
  namespace: default
spec:
  replacePath:
    path: /health
